Check source maps in Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ before_cache:
   - find $HOME/.sbt        -name "*.lock"               -print -delete
 
 script:
-  - sbt compile
-  - sbt universal:packageBin
+  - ci/checksourcemaps.sh
 
 notifications:
   email:
